--- a/CustomMayd.DataLake.Extractors/CustomMayd.DataLake.Extractors.csproj
+++ b/CustomMayd.DataLake.Extractors/CustomMayd.DataLake.Extractors.csproj
@@ -43,7 +43,7 @@
     <Reference Include="Microsoft.Analytics.Types" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="FixedWidthExtractor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
